--- a/css/general.css
+++ b/css/general.css
@@ -71,6 +71,7 @@ html {
     Percentage of user's browser font-size setting
   */
   font-size: 62.5%; /* font-size: 10px = 1rem; */
+  overflow-x: hidden;
 }
 
 body {
@@ -78,6 +79,9 @@ body {
   line-height: 1;
   font-weight: 400;
   color: #555;
+
+  /* only works if there is nothing absolutely positioned in relation to body */
+  overflow-x: hidden;
 }
 
 strong {
